fixed members contacts letter-spacing

--- a/src/scss/layout/sections/_section-members.scss
+++ b/src/scss/layout/sections/_section-members.scss
@@ -113,7 +113,7 @@
   font-weight: 300;
   font-size: 16px;
   line-height: 35px;
-  letter-spacing: -0.68px;
+  letter-spacing: -0.4px;
 
   a {
     display: inline-block;
